<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Barcode Scanner</string>
    <string name="version_number">ALPHA 0.2</string>

    <!-- activity_introduction.xml -->
    <string name="title_activity_introduction"></string>
    <string name="introduction_logotype_description">Barcode Scanner Logotype</string>
    <string name="introduction_intro_message">Welcome! Please choose in what way you wish to use the Barcode Scanner.</string>
    <string name="introduction_admin_mode_button">Admin Mode</string>
    <string name="introduction_scan_mode_button">Scan Mode</string>

    <!-- activity_main.xml -->
    <string name="title_activity_main"></string>
    <string name="main_news_title">WHAT\'S NEW IN %1$s?</string>
    <string name="main_news">Several new features have been implemented:\n  • Adding products manually.\n  • Searching the database.\n  • Deleting multiple products simultaneously.\n  • Help overlays.\n  • Camera preview aspect ratio is now correct.\n  • An about screen.\n  • A look that is more in line with standard Android design guidelines.\n  • Tons of bugfixes!</string>
    <string name="main_menu_scan">Scan Barcode</string>
    <string name="main_menu_access_database">Access Database</string>

    <!-- activity_camera.xml -->
    <string name="title_activity_camera"></string>
    <string name="camera_scan_button_description">Scan</string>

    <!-- activity_add_manually.xml -->
    <string name="title_activity_add_manually">Create product</string>
    <string name="manual_product_id_hint">ID</string>
    <string name="manual_product_name_hint">Name</string>
    <string name="manual_product_price_hint">Price</string>
    <string name="manual_product_menu_accept">Accept</string>

    <!-- activity_camera_preview.xml -->
    <string name="title_activity_camera_preview"></string>
    <string name="take_picture">Scan Barcode</string>

    <!-- activity_product.xml -->
    <string name="title_activity_product">Product</string>
    <string name="product_id_title">ID</string>
    <string name="product_name_title">NAME</string>
    <string name="product_price_title">PRICE</string>
    <string name="product_menu_edit">Edit</string>
    <string name="product_menu_delete">Delete</string>
    <string name="product_dialog_title">Delete this product?</string>
    <string name="product_dialog_message">This will remove the product from the database. This cannot be undone.</string>
    <string name="product_dialog_ok">Delete</string>
    <string name="product_dialog_cancel">Cancel</string>

    <!-- activity_database.xml -->
    <string name="title_activity_database">Database</string>
    <string name="database_toast_deleted">%1$s has been removed from the database.</string>
    <string name="database_search_hint">Type to search for a product.</string>
    <string name="database_empty">The database is empty.</string>
    <string name="database_empty_text">The database is currently empty.\nYou can add products by pressing the "Create Product" button on the Action Bar.</string>
    <string name="database_search_result_empty">No product found matching your search query.</string>
    <string name="database_currency">kr</string>
    <string name="database_menu_search">Search Database</string>
    <string name="database_menu_create">Create Product</string>
    <string name="context_menu_delete">Delete Product(s)</string>
    <string name="context_menu_toast_one_deleted">%1$s has been deleted.</string>
    <string name="context_menu_toast_several_deleted">%1$s products have been deleted.</string>
    <string name="context_menu_dialog_title_one">Delete this product?</string>
    <string name="context_menu_dialog_title_several">Delete %1$s products?</string>
    <string name="context_menu_dialog_message_one">This will remove the product from the database. This cannot be undone.</string>
    <string name="context_menu_dialog_message_several">This will remove these products from the database. This cannot be undone.</string>
    <string name="context_menu_dialog_ok">Delete</string>
    <string name="context_menu_dialog_cancel">Cancel</string>

    <!-- activity_no_product.xml -->
    <string name="title_activity_no_product"></string>
    <string name="no_product_id_title">Product ID - </string>
    <string name="no_product_default_id">N/A</string>
    <string name="no_product_message_title">No product found</string>
    <string name="no_product_message">No product matching the scanned barcode was found in the database.</string>

    <!-- activity_addnew.xml -->
    <string name="title_activity_add_new">New product</string>
    <string name="new_product_default_id">N/A</string>
    <string name="new_product_id_hint">ID</string>
    <string name="new_product_name_hint">Name</string>
    <string name="new_product_price_hint">Price</string>
    <string name="new_product_toast_done">%1$s has been added.</string>
    <string name="new_product_toast_failed">The price has to be an integer.</string>
    <string name="new_product_menu_accept">Accept</string>

    <!-- activity_edit.xml -->
    <string name="title_activity_edit_product"></string>
    <string name="edit_product_default_id">N/A</string>
    <string name="edit_product_id_hint">ID</string>
    <string name="edit_product_name_hint">Name</string>
    <string name="edit_product_price_hint">Price</string>
    <string name="edit_product_toast_done">%1$s has been updated.</string>
    <string name="edit_product_toast_failed">The new price has to be an integer.</string>
    <string name="edit_product_menu_accept">Accept</string>

    <!-- activity_barcode_view.xml -->
    <string name="title_activity_barcode_view"></string>
    <string name="barcode_view_description">Below is a bitmap representing the barcode that our algorithm has found.</string>
    <string name="barcode_view_image_description">There is supposed to be a barcode bitmap here, but it seems to have gotten lost! Where can it be?</string>

    <!-- activity_help.xml -->
    <string name="title_activity_help">Help</string>
    <string name="help_title">How to use the Barcode Scanner</string>
    <string name="help_field_start_scan_activity">In order to scan an barcode, you first have to start the scanning mode. This is done by pressing the scan button in the action bar in the main screen.</string>
    <string name="help_field_how_to_scan">Once there, center the barcode in your screen, and then press the scan button.</string>
    <string name="help_field_problems">Sometimes you might get inconsistent results. Our scanning algorithm is not yet super-amazing, so you\'ll have to make sure that your device is held in landscape mode, as in the normal "bottom" of your device is held by your right hand. You should keep the barcode relatively flat, centered in the screen and not too small.</string>
    <string name="help_database_title">How to access and edit the database</string>
    <string name="help_database_field_how_to_enter">While in the main menu, press the database button to enter the database.</string>
    <string name="help_database_field_in_database">The database shows each stored item and their respective barcode id\'s, names and prices. You can search the database by pressing the search button in the action bar. You can also add products manually by pressing the "plus" sign in the action bar.</string>
    <string name="help_database_field_product">Touching a product takes you to a separate product screen, where you can edit and delete that specific product.</string>
    <string name="help_database_field_multiple">Touching and holding on an item lets you select multiple items. Once you\'ve long-touched one item, a simple touch on any other item will add that item to your selection.\nYou can then delete selected items by touching the Delete Items button in the contexual action bar that pops up over the standard action bar.</string>

    <!-- activity_about.xml -->
    <string name="title_activity_about">About</string>
    <string name="about_title">APPLICATION AUTHORS</string>
    <string name="about_coder_one">Christian Svensson</string>
    <string name="about_coder_one_nick">Crillesvensson</string>
    <string name="about_coder_two">Rasmus Letterkrantz</string>
    <string name="about_coder_two_nick">Rasmus92</string>
    <string name="about_coder_three">Olle Andreasson</string>
    <string name="about_coder_three_nick">Oted</string>
    <string name="about_coder_four">Olof Karlsson</string>
    <string name="about_coder_four_nick">Pigmassacre</string>
    <string name="about_copyright_title">COPYRIGHT INFORMATION</string>
    <string name="about_copyright">Copyright © 2013. All Rights Reserved.</string>

    <!-- activity_main_intro.xml -->
    <string name="title_activity_main_intro"></string>
    <string name="intro_database_arrow">Arrow pointing to database button</string>
    <string name="intro_database">Click here to view and edit the database</string>
    <string name="intro_scan_arrow">Arrow pointing to scan button</string>
    <string name="intro_scan">Click here to scan a barcode</string>
    
    <!--  activity_database_intro.xml -->
    <string name="title_activity_database_intro"></string>
    <string name="intro_product_arrow">Arrow pointing to Create Product button</string>
    <string name="intro_product">Click here to create a product</string>
    <string name="intro_search_arrow">Arrow pointing to Search button</string>
    <string name="intro_search">Click here to search the database</string>

    <!-- Standard Menu Strings -->
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    

</resources>