<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:paddingLeft="5dp"
        android:text="@string/about_title"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold" />

    <View
        android:id="@+id/about_title_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/about_title"
        android:background="@android:color/holo_blue_light" />

    <TextView
        android:id="@+id/about_coder_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_title_divider"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/about_coder_one" />

    <TextView
        android:id="@+id/about_coder_one_nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/about_coder_one"
        android:text="@string/about_coder_one_nick"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/about_coder_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_coder_one"
        android:layout_marginBottom="8dp"
        android:text="@string/about_coder_two" />

    <TextView
        android:id="@+id/about_coder_two_nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/about_coder_two"
        android:text="@string/about_coder_two_nick"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/about_coder_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_coder_two"
        android:layout_marginBottom="8dp"
        android:text="@string/about_coder_three" />

    <TextView
        android:id="@+id/about_coder_three_nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/about_coder_three"
        android:text="@string/about_coder_three_nick"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/about_coder_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_coder_three"
        android:layout_marginBottom="8dp"
        android:text="@string/about_coder_four" />

    <TextView
        android:id="@+id/about_coder_four_nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/about_coder_four"
        android:text="@string/about_coder_four_nick"
        android:textStyle="bold" />

</RelativeLayout>