<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".HelpActivity" >

        <TextView
            android:id="@+id/help_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:paddingLeft="5dp"
            android:text="@string/help_title"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold" />

        <View
            android:id="@+id/help_title_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_light" />

        <TextView
            android:id="@+id/help_field_start_scan_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/help_field_start_scan_activity" />

        <TextView
            android:id="@+id/help_field_how_to_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/help_field_how_to_scan" />

        <TextView
            android:id="@+id/help_field_problems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/help_field_problems" />

        <TextView
            android:id="@+id/help_database_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:paddingLeft="5dp"
            android:text="@string/help_database_title"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold" />

        <View
            android:id="@+id/help_database_title_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_light" />

        <TextView
            android:id="@+id/help_database_field_how_to_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/help_database_field_how_to_enter" />

        <TextView
            android:id="@+id/help_database_field_in_database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/help_database_field_in_database" />

        <TextView
            android:id="@+id/help_database_field_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/help_database_field_product" />

        <TextView
            android:id="@+id/help_database_field_multiple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/help_database_field_multiple" />
    </LinearLayout>

</ScrollView>