<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/no_product_id_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:text="@string/no_product_id_title"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/no_product_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@id/no_product_id_title"
        android:layout_alignBaseline="@id/no_product_id_title"
        android:text="@string/no_product_default_id"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/no_product_message_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/no_product_message_title"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/no_product_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/no_product_message_title"
        android:layout_centerHorizontal="true"
        android:text="@string/no_product_message"
        android:textSize="15sp"
        android:textStyle="italic" />

</RelativeLayout>